	* Cleaned up warnings in 'CmdSwitch'.
2019-08-30 Fred Gleason <fredg@paravelsystems.com>
	* Got fully synchronous HLS metadata working.
2019-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--json' switch to glassplayer(1).
2019-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Refactored glassplayergui(1) to use JSON-based IPC.
2019-09-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in glassplayergui(1) that caused meters
	to be rendered incorrectly.
2019-09-12 Fred Gleason <fredg@paravelsystems.com>
	* Re-indented switch() statements in
	'src/glassplayergui/segmeter.cpp'.
2019-09-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in glassplayer(1) that caused it to emit invalid
	JSON when invoked with '--metadata-out --json' on a stream
	containing no metadata.
2019-09-13 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that broke metadata processing when using the
	'FILE' audio device.
2019-09-13 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in glassplayergui(1) that processed integer JSON
	values incorrectly.
2019-09-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in glassplayer(1) that caused audio dropouts when
	playing HLS streams containing timed metadata.
	* Added an 'AOT' metric to the AAC codec.
	* Added a 'Transport Sync Errors' the AAC codec.
2020-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Codec|Algorithm' parameter for the 'fdk-aac' codec
	to use a static value of 'AAC'.
	* Updated glassplayer(1) to work properly with FDK-AACv2.
2020-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Fixed spelling error in error message in glassplayer(1).
2020-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--dump-headers' swich to glassplayer(1).
	* Implemented the '--dump-headers' swich for the XCast server type.
2020-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in glassplayer(1) that caused corruption when reading
	multi-byte UTF-8 characters from XCast headers.